--- a/sec-myopenmath.html
+++ b/sec-myopenmath.html
@@ -268,16 +268,20 @@ eBookConfig.enable_chatcodes =  false;
 <article class="example example-like" id="sec-myopenmath-3"><h3 class="heading">
 <span class="type">Example</span><span class="space"> </span><span class="codenumber">1.1</span><span class="period">.</span>
 </h3>
-<div class="para" id="sec-myopenmath-3-1">This is problem with Question ID 154765.</div>
-<div id="momsec-myopenmath-3-2wrap" style="width:100%;overflow:visible;position:relative"><iframe id="momsec-myopenmath-3-2" style="position:absolute;z-index:1;object-fit: contain; width: 100%" frameborder="0" data-knowl-callback="sendResizeRequest" src="https://www.myopenmath.com/embedq2.php?id=1541765&amp;frame_id=momsec-myopenmath-3-2"></iframe></div></article><article class="example example-like" id="sec-myopenmath-4"><h3 class="heading">
+<div class="para" id="sec-myopenmath-3-1">This is problem with Question ID 15963.</div>
+<div id="momsec-myopenmath-3-2wrap" style="width:100%;overflow:visible;position:relative"><iframe id="momsec-myopenmath-3-2" style="position:absolute;z-index:1;object-fit: contain; width: 100%" frameborder="0" data-knowl-callback="sendResizeRequest" src="https://www.myopenmath.com/embedq2.php?id=15963&amp;frame_id=momsec-myopenmath-3-2"></iframe></div></article><article class="example example-like" id="sec-myopenmath-4"><h3 class="heading">
 <span class="type">Example</span><span class="space"> </span><span class="codenumber">1.2</span><span class="period">.</span>
 </h3>
-<div class="para" id="sec-myopenmath-4-1">This is a problem with Question ID 110324.</div>
-<div id="momsec-myopenmath-4-2wrap" style="width:100%;overflow:visible;position:relative"><iframe id="momsec-myopenmath-4-2" style="position:absolute;z-index:1;object-fit: contain; width: 100%" frameborder="0" data-knowl-callback="sendResizeRequest" src="https://www.myopenmath.com/embedq2.php?id=110324&amp;frame_id=momsec-myopenmath-4-2"></iframe></div></article><article class="example example-like" id="sec-myopenmath-5"><h3 class="heading">
+<div class="para" id="sec-myopenmath-4-1">This is problem with Question ID 154765.</div>
+<div id="momsec-myopenmath-4-2wrap" style="width:100%;overflow:visible;position:relative"><iframe id="momsec-myopenmath-4-2" style="position:absolute;z-index:1;object-fit: contain; width: 100%" frameborder="0" data-knowl-callback="sendResizeRequest" src="https://www.myopenmath.com/embedq2.php?id=1541765&amp;frame_id=momsec-myopenmath-4-2"></iframe></div></article><article class="example example-like" id="sec-myopenmath-5"><h3 class="heading">
 <span class="type">Example</span><span class="space"> </span><span class="codenumber">1.3</span><span class="period">.</span>
 </h3>
-<div class="para" id="sec-myopenmath-5-1">This is a problem with Question ID 111923.</div>
-<div id="momsec-myopenmath-5-2wrap" style="width:100%;overflow:visible;position:relative"><iframe id="momsec-myopenmath-5-2" style="position:absolute;z-index:1;object-fit: contain; width: 100%" frameborder="0" data-knowl-callback="sendResizeRequest" src="https://www.myopenmath.com/embedq2.php?id=111923&amp;frame_id=momsec-myopenmath-5-2"></iframe></div></article></section></div>
+<div class="para" id="sec-myopenmath-5-1">This is a problem with Question ID 110324.</div>
+<div id="momsec-myopenmath-5-2wrap" style="width:100%;overflow:visible;position:relative"><iframe id="momsec-myopenmath-5-2" style="position:absolute;z-index:1;object-fit: contain; width: 100%" frameborder="0" data-knowl-callback="sendResizeRequest" src="https://www.myopenmath.com/embedq2.php?id=110324&amp;frame_id=momsec-myopenmath-5-2"></iframe></div></article><article class="example example-like" id="sec-myopenmath-6"><h3 class="heading">
+<span class="type">Example</span><span class="space"> </span><span class="codenumber">1.4</span><span class="period">.</span>
+</h3>
+<div class="para" id="sec-myopenmath-6-1">This is a problem with Question ID 111923.</div>
+<div id="momsec-myopenmath-6-2wrap" style="width:100%;overflow:visible;position:relative"><iframe id="momsec-myopenmath-6-2" style="position:absolute;z-index:1;object-fit: contain; width: 100%" frameborder="0" data-knowl-callback="sendResizeRequest" src="https://www.myopenmath.com/embedq2.php?id=111923&amp;frame_id=momsec-myopenmath-6-2"></iframe></div></article></section></div>
 <div class="ptx-content-footer">
 <a class="previous-button button" href="chapter-testing.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="top-button button" href="#" title="Top"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Top</span></a><a class="next-button button" href="chapter-realnumbers.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a>
 </div></main>
