Latest build deployed.

--- a/frontmatter.html
+++ b/frontmatter.html
@@ -141,7 +141,7 @@ eBookConfig.enable_chatcodes =  false;
 <div class="ptx-page">
 <div id="ptx-sidebar" class="ptx-sidebar"><nav id="ptx-toc" class="ptx-toc depth2"><ul class="structural toc-item-list contains-active">
 <li class="toc-item toc-frontmatter active"><div class="toc-title-box"><a href="frontmatter.html" class="internal"><span class="title">Front Matter</span></a></div></li>
-<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="chapter-testing.html" class="internal"><span class="codenumber">1</span> <span class="title">Derivative RulesDerivatives of Polynomials and Exponential Functions</span></a></div></li>
+<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="chapter-testing.html" class="internal"><span class="codenumber">1</span> <span class="title">Derivative Rules</span></a></div></li>
 </ul></nav></div>
 <main class="ptx-main"><div id="ptx-content" class="ptx-content"><section class="frontmatter" id="frontmatter"><h2 class="heading"><span class="title">Calculus Preperation Workbook</span></h2>
 <div class="author">
