Latest build deployed.

--- a/backmatter.html
+++ b/backmatter.html
@@ -8,7 +8,7 @@
 <html lang="en-US" dir="ltr" data-legacy-colorscheme="blue_grey">
 <head xmlns:og="http://ogp.me/ns#" xmlns:book="https://ogp.me/ns/book#">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Exam 2 Review</title>
+<title>Backmatter</title>
 <meta name="Keywords" content="Authored in PreTeXt">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta property="og:type" content="book">
@@ -129,7 +129,7 @@ eBookConfig.enable_chatcodes =  false;
 <ol id="searchresults" class="searchresults"></ol>
 </div>
 </div>
-<span class="nav-other-controls"></span><span class="treebuttons"><span class="previous-button button disabled"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></span><a class="up-button button" href="calc-prep.html" title="Up"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Up</span></a><a class="next-button button" href="backmatter.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a></span>
+<span class="nav-other-controls"></span><span class="treebuttons"><a class="previous-button button" href="chapter-testing.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="up-button button" href="calc-prep.html" title="Up"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Up</span></a><a class="next-button button" href="backmatter-2.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a></span>
 </div></nav><div id="latex-macros" class="hidden-content process-math" style="display:none"><span class="process-math">\(\newcommand{\R}{\mathbb R}
 \newcommand{\reference}[1]{\overline{#1}}
 \newcommand{\lt}{&lt;}
@@ -141,70 +141,12 @@ eBookConfig.enable_chatcodes =  false;
 <div class="ptx-page">
 <div id="ptx-sidebar" class="ptx-sidebar"><nav id="ptx-toc" class="ptx-toc depth2"><ul class="structural toc-item-list contains-active">
 <li class="toc-item toc-frontmatter"><div class="toc-title-box"><a href="frontmatter.html" class="internal"><span class="title">Front Matter</span></a></div></li>
-<li class="toc-item toc-chapter active"><div class="toc-title-box"><a href="chapter-testing.html" class="internal"><span class="codenumber">1</span> <span class="title">Exam 2 Review</span></a></div></li>
-<li class="toc-item toc-backmatter"><div class="toc-title-box"><a href="backmatter.html" class="internal"><span class="title">Backmatter</span></a></div></li>
+<li class="toc-item toc-chapter"><div class="toc-title-box"><a href="chapter-testing.html" class="internal"><span class="codenumber">1</span> <span class="title">Exam 2 Review</span></a></div></li>
+<li class="toc-item toc-backmatter active"><div class="toc-title-box"><a href="backmatter.html" class="internal"><span class="title">Backmatter</span></a></div></li>
 </ul></nav></div>
-<main class="ptx-main"><div id="ptx-content" class="ptx-content"><section class="chapter" id="chapter-testing"><h2 class="heading">
-<span class="type">Chapter</span><span class="space"> </span><span class="codenumber">1</span><span class="space"> </span><span class="title">Exam 2 Review</span>
-</h2>
-<article class="objectives goal-like" id="chapter-testing-2"><h2 class="heading"><span class="type">Objectives</span></h2>
-<ul class="disc" id="chapter-testing-2-1"><li id="chapter-testing-2-1-1"><div class="para" id="p-derived-chapter-testing-2-1-1">1. I can find the <dfn class="terminology">derivative</dfn> of a function using the limit definition.</div></li></ul></article><div class="para logical" id="chapter-testing-3">
-<div class="para">Need to know</div>
-<div class="displaymath process-math">
-\begin{equation*}
-\lim_{h \to 0} \frac{f(x+h)-f(x)}{h} 
-\end{equation*}
-</div>
-</div>
-<article class="example example-like" id="chapter-testing-4"><h2 class="heading">
-<span class="type">Example</span><span class="space"> </span><span class="codenumber">1.1</span><span class="period">.</span>
-</h2>
-<div id="momchapter-testing-4-1wrap" style="width:100%;overflow:visible;position:relative"><iframe id="momchapter-testing-4-1" style="position:absolute;z-index:1;object-fit: contain; width: 100%" frameborder="0" data-knowl-callback="sendResizeRequest" src="https://www.myopenmath.com/embedq2.php?id=1556416&amp;frame_id=momchapter-testing-4-1"></iframe></div></article><article class="example example-like" id="chapter-testing-5"><h2 class="heading">
-<span class="type">Example</span><span class="space"> </span><span class="codenumber">1.2</span><span class="period">.</span>
-</h2>
-<div id="momchapter-testing-5-1wrap" style="width:100%;overflow:visible;position:relative"><iframe id="momchapter-testing-5-1" style="position:absolute;z-index:1;object-fit: contain; width: 100%" frameborder="0" data-knowl-callback="sendResizeRequest" src="https://www.myopenmath.com/embedq2.php?id=1556026&amp;frame_id=momchapter-testing-5-1"></iframe></div></article><article class="example example-like" id="chapter-testing-6"><h2 class="heading">
-<span class="type">Example</span><span class="space"> </span><span class="codenumber">1.3</span><span class="period">.</span>
-</h2>
-<div id="momchapter-testing-6-1wrap" style="width:100%;overflow:visible;position:relative"><iframe id="momchapter-testing-6-1" style="position:absolute;z-index:1;object-fit: contain; width: 100%" frameborder="0" data-knowl-callback="sendResizeRequest" src="https://www.myopenmath.com/embedq2.php?id=1556425&amp;frame_id=momchapter-testing-6-1"></iframe></div></article><div class="para" id="chapter-testing-7">I can interpret the derivative as an instantaneous rate of change and as the slope of a tangent line.</div>
-<pre class="code-block tex2jax_ignore">Textbook problems Section 2.7:  49 - 56;
-
-Textbook problems Section 2.8:  12 - 15, 36 - 40
-</pre>
-<div class="para" id="chapter-testing-9">I can find an equation for a tangent line to a function at a point using the derivative.</div>
-<article class="example example-like" id="chapter-testing-10"><h2 class="heading">
-<span class="type">Example</span><span class="space"> </span><span class="codenumber">1.4</span><span class="period">.</span>
-</h2>
-<div id="momchapter-testing-10-1wrap" style="width:100%;overflow:visible;position:relative"><iframe id="momchapter-testing-10-1" style="position:absolute;z-index:1;object-fit: contain; width: 100%" frameborder="0" data-knowl-callback="sendResizeRequest" src="https://www.myopenmath.com/embedq2.php?id=1559694&amp;frame_id=momchapter-testing-10-1"></iframe></div></article><div class="para" id="chapter-testing-11">I can use the graph of a function to determine the behavior of its derivative, including constructing a graph of the dereivative and identifying points of non-differentiability.</div>
-<pre class="code-block tex2jax_ignore">Textbook problems Section 2.8: 1 - 11, 41 - 44
-</pre>
-<div class="para" id="chapter-testing-13">I can determine the behavior of a function given the graph of its derivative, including identifying points of non-differentiability.</div>
-<pre class="code-block tex2jax_ignore">Problems from review worksheet.
-</pre>
-<div class="para" id="chapter-testing-15">I can find the derivative of algebraic, trigonometric, exponential, logarithmic, and inverse trigonometric functions.</div>
-<article class="example example-like" id="chapter-testing-16"><h2 class="heading">
-<span class="type">Example</span><span class="space"> </span><span class="codenumber">1.5</span><span class="period">.</span>
-</h2>
-<div id="momchapter-testing-16-1wrap" style="width:100%;overflow:visible;position:relative"><iframe id="momchapter-testing-16-1" style="position:absolute;z-index:1;object-fit: contain; width: 100%" frameborder="0" data-knowl-callback="sendResizeRequest" src="https://www.myopenmath.com/embedq2.php?id=1558434&amp;frame_id=momchapter-testing-16-1"></iframe></div></article><article class="example example-like" id="chapter-testing-17"><h2 class="heading">
-<span class="type">Example</span><span class="space"> </span><span class="codenumber">1.6</span><span class="period">.</span>
-</h2>
-<div id="momchapter-testing-17-1wrap" style="width:100%;overflow:visible;position:relative"><iframe id="momchapter-testing-17-1" style="position:absolute;z-index:1;object-fit: contain; width: 100%" frameborder="0" data-knowl-callback="sendResizeRequest" src="https://www.myopenmath.com/embedq2.php?id=1557374&amp;frame_id=momchapter-testing-17-1"></iframe></div></article><article class="example example-like" id="chapter-testing-18"><h2 class="heading">
-<span class="type">Example</span><span class="space"> </span><span class="codenumber">1.7</span><span class="period">.</span>
-</h2>
-<div id="momchapter-testing-18-1wrap" style="width:100%;overflow:visible;position:relative"><iframe id="momchapter-testing-18-1" style="position:absolute;z-index:1;object-fit: contain; width: 100%" frameborder="0" data-knowl-callback="sendResizeRequest" src="https://www.myopenmath.com/embedq2.php?id=1557421&amp;frame_id=momchapter-testing-18-1"></iframe></div></article><article class="example example-like" id="chapter-testing-19"><h2 class="heading">
-<span class="type">Example</span><span class="space"> </span><span class="codenumber">1.8</span><span class="period">.</span>
-</h2>
-<div id="momchapter-testing-19-1wrap" style="width:100%;overflow:visible;position:relative"><iframe id="momchapter-testing-19-1" style="position:absolute;z-index:1;object-fit: contain; width: 100%" frameborder="0" data-knowl-callback="sendResizeRequest" src="https://www.myopenmath.com/embedq2.php?id=1557411&amp;frame_id=momchapter-testing-19-1"></iframe></div></article><article class="example example-like" id="chapter-testing-20"><h2 class="heading">
-<span class="type">Example</span><span class="space"> </span><span class="codenumber">1.9</span><span class="period">.</span>
-</h2>
-<div id="momchapter-testing-20-1wrap" style="width:100%;overflow:visible;position:relative"><iframe id="momchapter-testing-20-1" style="position:absolute;z-index:1;object-fit: contain; width: 100%" frameborder="0" data-knowl-callback="sendResizeRequest" src="https://www.myopenmath.com/embedq2.php?id=1557388&amp;frame_id=momchapter-testing-20-1"></iframe></div></article><div class="para" id="chapter-testing-21">I can apply basic differentiation rules including power, product, quotient and chain rules to find derivatives of a given function.</div>
-<article class="example example-like" id="chapter-testing-22"><h2 class="heading">
-<span class="type">Example</span><span class="space"> </span><span class="codenumber">1.10</span><span class="period">.</span>
-</h2>
-<div id="momchapter-testing-22-1wrap" style="width:100%;overflow:visible;position:relative"><iframe id="momchapter-testing-22-1" style="position:absolute;z-index:1;object-fit: contain; width: 100%" frameborder="0" data-knowl-callback="sendResizeRequest" src="https://www.myopenmath.com/embedq2.php?id=1559746&amp;frame_id=momchapter-testing-22-1"></iframe></div></article><div class="para" id="chapter-testing-23">I can find higher-order derivatives.</div>
-<div class="para" id="chapter-testing-24">I can find derivatives using implicit differentitation.</div>
-<div class="para" id="chapter-testing-25">I can find derivatives using logarithmic differentiation.</div></section></div>
+<main class="ptx-main"><div id="ptx-content" class="ptx-content"><section class="backmatter" id="backmatter"><nav class="summary-links"><ul><li><a href="backmatter-2.html" class="internal"><span class="title">Colophon</span></a></li></ul></nav></section></div>
 <div class="ptx-content-footer">
-<span class="previous-button button disabled"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></span><a class="top-button button" href="#" title="Top"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Top</span></a><a class="next-button button" href="backmatter.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a>
+<a class="previous-button button" href="chapter-testing.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="top-button button" href="#" title="Top"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Top</span></a><a class="next-button button" href="backmatter-2.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a>
 </div></main>
 </div>
 <div id="ptx-page-footer" class="ptx-page-footer">
